--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: android
+android:
+  components:
+    - build-tools-26.0.2
+    - android-26
+    - extra
 sudo: required
 jdk: oraclejdk8
 before_cache:
@@ -8,3 +13,4 @@ cache:
  directories:
  -$HOME/.gradle/caches/
  -$HOME/.gradle/wrapper/
+ 
