--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,11 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".SignUp">
+        <activity
+                android:name=".MainActivity"
+                android:label="@string/title_activity_main">
         </activity>
-        <activity android:name=".MainScreen">
+        <activity android:name=".SignUp">
         </activity>
         <activity
                 android:name=".Login"
