--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,20 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity
+                android:name=".ProductListActivity"
+                android:label="@string/title_product_list"
+                android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+                android:name=".ProductDetailActivity"
+                android:label="@string/title_product_detail"
+                android:parentActivityName=".ProductListActivity"
+                android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="com.csc309.arspace.ProductListActivity"/>
+        </activity>
+        <activity
                 android:name=".MainActivity"
                 android:label="@string/title_activity_main">
         </activity>
