--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,41 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.csc309.arspace">
+    package="com.csc309.arspace">
 
     <application
-            android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
         <activity
-                android:name=".ProductListActivity"
-                android:label="@string/title_product_list"
-                android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-        <activity
-                android:name=".ProductDetailActivity"
-                android:label="@string/title_product_detail"
-                android:parentActivityName=".ProductListActivity"
-                android:theme="@style/AppTheme.NoActionBar">
+            android:name=".ProductDetailActivity"
+            android:label="@string/title_product_detail"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/NoActionBar">
             <meta-data
-                    android:name="android.support.PARENT_ACTIVITY"
-                    android:value="com.csc309.arspace.ProductListActivity"/>
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.csc309.arspace.MainActivity" />
         </activity>
         <activity
-                android:name=".MainActivity"
-                android:label="@string/title_activity_main">
+            android:name=".MainActivity"
+            android:label="@string/title_activity_main"
+            >
+            <meta-data android:name="android.app.default_searchable"
+                android:value=".SearchableActivity" />
         </activity>
-        <activity android:name=".SignUp">
-        </activity>
+        <activity android:name=".SignUp"></activity>
         <activity
-                android:name=".Login"
-                android:label="@string/app_name">
+            android:name=".Login"
+            android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
