--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,22 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-<<<<<<< Updated upstream
-    package="com.csc309.arspace">
-
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity
-            android:name=".ProductDetailActivity"
-            android:label="@string/title_product_detail"
-            android:parentActivityName=".MainActivity"
-            android:theme="@style/NoActionBar">
-=======
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.csc309.arspace">
 
     <!-- Always needed for AR. -->
@@ -35,19 +18,12 @@
             android:theme="@style/AppTheme">
 
         <meta-data android:name="com.google.ar.core" android:value="required" />
-
-        <activity
-                android:name=".ProductListActivity"
-                android:label="@string/title_product_list"
-                android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-
+        <activity android:name=".SceneformActivity"></activity>
         <activity
                 android:name=".ProductDetailActivity"
                 android:label="@string/title_product_detail"
-                android:parentActivityName=".ProductListActivity"
-                android:theme="@style/AppTheme.NoActionBar">
->>>>>>> Stashed changes
+                android:parentActivityName=".MainActivity"
+                android:theme="@style/NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.csc309.arspace.MainActivity" />
