--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,12 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.4.0'
         classpath 'com.google.gms:google-services:4.2.0'
         classpath 'com.google.ar.sceneform:plugin:1.8.0'
-
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7.1"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
 }
 
 allprojects {
