--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,8 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
+systemProp.sonar.host.url=https://sonarcloud.io
+systemProp.sonar.login=7c28e845b14085cedec5948e63ee5e58fcfdb800
+systemProp.sonar.projectKey=jackbtroop62_AR-Space
+systemProp.sonar.organization=jackbtroop62-github
 
