--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.9'
     implementation 'com.google.firebase:firebase-database:17.0.0'
     implementation 'com.google.firebase:firebase-auth:17.0.0'
+    implementation 'com.firebaseui:firebase-ui-firestore:4.1.0'
     implementation 'com.google.android.gms:play-services-gcm:16.1.0'
     implementation 'com.google.firebase:firebase-firestore:19.0.2'
     testImplementation 'junit:junit:4.13-beta-2'
